glib-macros/tests/closure_compiletest/01-closure-empty.stderr
error: expected a closure
 --> tests/closure_compiletest/01-closure-empty.rs:4:5
  |
4 |     closure!();
  |     ^^^^^^^^^^
  |
  = note: this error originates in the macro `closure` (in Nightly builds, run with -Z macro-backtrace for more info)
